Copy Paste is inconsistant with datablocks #49014

Closed
opened 2016-08-04 10:47:23 +02:00 by Carlo Andreacchio · 8 comments

System Information
Windows 7 x64 GTX 580

Blender Version
Broken: 99b1c10, 473fc0c,

Short description of error
Sometimes Copy Pasting between blend files gets messed up, ends up with a file similar to the attached, in which cannot objects cannot be copy / pasted between blend files (empties are created instead of the mesh iteself)

Exact steps for others to reproduce the error

  1. Open the attached blend file
  2. Copy
  3. open new blend
  4. paste
  5. notice that an empty is created instead of a mesh.

I cannot replicate this on another computer... but it is quite consistent on that specific machine with the attached file.

Our workflow orientates significantly around the copy pasting between blend files... but sometimes we copy and paste from recovered files. We do not pack textures into blend files, which makes it surprising that this has happened & has been broken at some stage. We do, however, all work off a server, which means that relative files cannot be held when using the autosave backups. Would this make a impact on the issue?

copyPasteBug.blend

**System Information** Windows 7 x64 GTX 580 **Blender Version** Broken: 99b1c10, 473fc0c, **Short description of error** Sometimes Copy Pasting between blend files gets messed up, ends up with a file similar to the attached, in which cannot objects cannot be copy / pasted between blend files (empties are created instead of the mesh iteself) **Exact steps for others to reproduce the error** 1. Open the attached blend file 2. Copy 3. open new blend 4. paste 5. notice that an empty is created instead of a mesh. I cannot replicate this on another computer... but it is quite consistent on that specific machine with the attached file. Our workflow orientates significantly around the copy pasting between blend files... but sometimes we copy and paste from recovered files. We do not pack textures into blend files, which makes it surprising that this has happened & has been broken at some stage. We do, however, all work off a server, which means that relative files cannot be held when using the autosave backups. Would this make a impact on the issue? [copyPasteBug.blend](https://archive.blender.org/developer/F332616/copyPasteBug.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @candreacchio

Added subscriber: @candreacchio

Added subscriber: @mont29

Added subscriber: @mont29

The file you attached uses the temp .blend created as copybuffer as linked library.

read blend: /home/i74700deb64/Téléchargements/copyPasteBug.blend
Info: Read library:  '/e/tmp/copybuffer.blend', 'E:\tmp\copybuffer.blend', parent '<direct>'
Warning: Cannot find lib '/e/tmp/copybuffer.blend'
Warning: LIB: Image: 'ConcreteBare0145_2_S.jpg.012' missing from '/e/tmp/copybuffer.blend', parent '<direct>'

What happens when you copy/paste is that Blender creates a temp .blend, put in it copied data, and then append from that .blend when pasting.

Here it looks like you did link, but the 'make local' stage broke, cannot do much about it unless you can provide us with a complete, step-by-step way to reproduce this situation.

Also, please note that in past couple of months a large part of internal datablocks handling was refactored in Blender, which means that if you have been using master (instead of official 2.77a release) this may come from those changes, I already fixed several bugs since then, so maybe checking if it still happens with latest master is worth it. ;)

The file you attached uses the temp .blend created as copybuffer as linked library. ``` read blend: /home/i74700deb64/Téléchargements/copyPasteBug.blend Info: Read library: '/e/tmp/copybuffer.blend', 'E:\tmp\copybuffer.blend', parent '<direct>' Warning: Cannot find lib '/e/tmp/copybuffer.blend' Warning: LIB: Image: 'ConcreteBare0145_2_S.jpg.012' missing from '/e/tmp/copybuffer.blend', parent '<direct>' ``` What happens when you copy/paste is that Blender creates a temp .blend, put in it copied data, and then append from that .blend when pasting. Here it looks like you did link, but the 'make local' stage broke, cannot do much about it unless you can provide us with a complete, step-by-step way to reproduce this situation. Also, please note that in past couple of months a large part of internal datablocks handling was refactored in Blender, which means that if you have been using master (instead of official 2.77a release) this may come from those changes, I already fixed several bugs since then, so maybe checking if it still happens with latest master is worth it. ;)

Ok i think i have a bit more info (this was done on 99b1c10 buildbot)

When image textures are inside a node group on a material they become linked image textures with copy / paste... instead of the whole image texture's datablock being transferred over.

We work off a server on windows... either X: Y: or Z: drive.... Sometimes we have to recover the auto save file which happens on the C: drive.

What i think happened was that the images inside a node group were linked from being copy / pasted, then we recovered an autosave from one of those files. But because links cant be held relative over drive names it would be broken. from there... we have the broken links for the images, and there we have the problem with the blend file.

What i request be changed is the functionality of the copy pasting with the nodegroups on materials... that the whole image is transferred across instead of being linked.

Steps to reproduce the linking of image texture inside a node group:

  1. Open blank blender
  2. Create new material
  3. create image texture & assign image to it & connect it to the diffuse bsdf node
  4. make that image texture into a node group
  5. copy that object
  6. open new blender
  7. paste that object
  8. check out the node group
Ok i think i have a bit more info (this was done on 99b1c10 buildbot) When image textures are inside a node group on a material they become linked image textures with copy / paste... instead of the whole image texture's datablock being transferred over. We work off a server on windows... either X: Y: or Z: drive.... Sometimes we have to recover the auto save file which happens on the C: drive. What i think happened was that the images inside a node group were linked from being copy / pasted, then we recovered an autosave from one of those files. But because links cant be held relative over drive names it would be broken. from there... we have the broken links for the images, and there we have the problem with the blend file. What i request be changed is the functionality of the copy pasting with the nodegroups on materials... that the whole image is transferred across instead of being linked. Steps to reproduce the linking of image texture inside a node group: 1. Open blank blender 2. Create new material 3. create image texture & assign image to it & connect it to the diffuse bsdf node 4. make that image texture into a node group 5. copy that object 6. open new blender 7. paste that object 8. check out the node group
Bastien Montagne self-assigned this 2016-08-05 08:53:39 +02:00

Thanks, can confirm - as expected, affects any append case, not only copy/paste ;)

Thanks, can confirm - as expected, affects any append case, not only copy/paste ;)

This issue was referenced by a0e72a0996

This issue was referenced by a0e72a0996e86199e46988f3c225c16c4a8ebc92

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49014
No description provided.